Bug 165230 - Some type of charts with data series on the rows are impossible to edit correctly when pasted out of calc with the data table function
Summary: Some type of charts with data series on the rows are impossible to edit corre...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, bisected, regression
: 159253 (view as bug list)
Depends on:
Blocks: Chart-Data
  Show dependency treegraph
 
Reported: 2025-02-13 11:57 UTC by Andy
Modified: 2025-04-10 17:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Here you have the two charts to be pasted into a writer doc, one with rows data and one with colum data (24.53 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-02-13 11:58 UTC, Andy
Details
Here the legend o f the yellow-green chart has gone berserk (25.92 KB, application/vnd.oasis.opendocument.text)
2025-02-13 11:59 UTC, Andy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2025-02-13 11:57:05 UTC
Description:
In bar charts with data in rows, once you paste the chart created in Calc into a writer doc, the "edit data table" function work wrongly when changing the data labels tha t go into the legend.

Steps to Reproduce:
1. Open the Calc file attached. Inside you will find two bar charts, one (red+blue) with data in columns and another (green+yellow) with data in rows.
2. Now open a writer doc, and paste the two charts into it.
3. Then open with double click the charts in the writer doc, to change some labels through the "edit data table" function.
4. the chart with data in columns allows you to edit the labels that go into the legend correctly
5. the chart with the data in rows, instead, behaves wrongly and the same action to edit the labels for the legend does not give the expected results: any modified content simply gets inserted in the legends togheter with the previous one. You can try to delete all text, but the text remains there. As you try again and again to modify the label, the resulting legend accumulates the results of every editing, increasing its length indefinitely.

Actual Results:
Editing of the legend content in bar charts that have data in rows fails

Expected Results:
The labels in the legend should be normally editable


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.3 (X86_64) / LibreOffice Community
Build ID: e1cf4a87eb02d755bce1a01209907ea5ddc8f069
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 17763); UI render: Skia/Raster; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: threaded
Comment 1 Andy 2025-02-13 11:58:20 UTC
Created attachment 199186 [details]
Here you have the two charts to be pasted into a writer doc, one with rows data and one with colum data
Comment 2 Andy 2025-02-13 11:59:51 UTC
Created attachment 199187 [details]
Here the legend o f the yellow-green chart has gone berserk

The legend shows all 4 test snippets I try to insert substituting one another: instead, they have accumulated in a superlong string that contains them all
Comment 3 Jessica 2025-02-13 13:40:53 UTC
Thank you for reporting the bug. I can confirm that the bug is present in

Version: 25.2.0.3 (X86_64) / LibreOffice Community
Build ID: e1cf4a87eb02d755bce1a01209907ea5ddc8f069
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

and in 

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fb8bf5f209e1bd7fd7d8ad555ec66dbf31649ee8
CPU threads: 16; OS: Windows 11 X86_64 (build 22631); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 4 m_a_riosv 2025-02-13 20:43:51 UTC
Latest version that works on the ones I have installed.
Versión: 5.4.7.2
Id. de compilación: c838ef25c16710f8838b1faec480ebba495259d0
Subprocs. CPU: 16; SO: Windows 6.2; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: CL
Comment 5 Saburo 2025-02-14 08:42:26 UTC
In the attached odt file, the pre-change labels still remain like zombies even in LibO3.3.
However, there is a difference in whether the set label follows the pre-change or is inserted before it; in 3.3-6.3 it is before, but from 6.4 it is after.
If you paste a new one from calc to writer, it seems to work fine in 6.3.
Bibisected with linux-64-6.4
 source fa0a981af41a2606541eec1cb20a379a739691e0

author	Balazs Varga
tdf#114166 DOCX chart import: fix missing complex categories

Now complex category labels are visible, and the inner data
table contains the correct texts of the category columns.

Note: repeating call of createDataSequenceByValueArray() API function
can create all columns of the complex categories. See also
commit 6c4e21a234f12e1310ba06f9859e08b424acf8bf
"bnc#812796: Correctly handle static value array for OOXML charts."
Comment 6 Andy 2025-02-27 11:45:00 UTC
I am sorry to bother, but from the latest comment I do not understand if a correction for this has been implemented or not.. Could you please clarify Thanks
Comment 7 Saburo 2025-02-28 09:16:24 UTC
(In reply to Andy from comment #6)
> I am sorry to bother, but from the latest comment I do not understand if a
> correction for this has been implemented or not.. Could you please clarify
> Thanks

I just mentioned the commit that seems to be the cause. It doesn't fix the problem.
Comment 8 Commit Notification 2025-04-09 15:11:32 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8815270721053233e32c8f4f6ad50f56b55b1469

tdf#165230 chart: fix multiplying row labels in innerdatatable

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gabor Kelemen (Collabora) 2025-04-10 09:07:25 UTC
*** Bug 159253 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2025-04-10 17:39:24 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/606003715b7b7f1f145194f8cf9fa7feda0f0efc

tdf#165230 chart: fix multiplying row labels in innerdatatable

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.