tdf#165230 chart: fix multiplying row labels in innerdatatable

We only need to handle category labels as multilevel labels.

regression from: fa0a981af41a2606541eec1cb20a379a739691e0
(DOCX chart import: fix missing complex categories)

Change-Id: I0958d87f315ddbe5cf2721a75a969abb09f4dc34
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183858
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit 8815270721053233e32c8f4f6ad50f56b55b1469)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183962
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>